Body overflow-x fixed

--- a/wp-content/themes/hr19/css/sass/_basic.sass
+++ b/wp-content/themes/hr19/css/sass/_basic.sass
@@ -1,6 +1,7 @@
 // General
 body
   font-family: Montserrat-Regular, sans-serif
+  overflow-x: hidden 
 
 .container-hr
   width: get-vw-desktop(1170px)
